# packet-sniffer

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs
.github/workflows/: ci.yml  deploy.yml  release.yml
app/: Cargo.toml  build.rs  tauri.conf.json
app/src/: background_worker.rs  lib.rs  main.rs  models.rs  setup.rs  updater.rs
app/src/handlers/: load.rs  mod.rs
app/src/models/: mod.rs
app/src/services/: app_startup_latch.rs  background_worker.rs  mod.rs  processor.rs  update_manager.rs
client/: Cargo.toml  log4rs.yaml
client/src/: main.rs
docs/: architecture.MD
game/client/: Cargo.toml
game/client/src/: main.rs
game/server/: Cargo.toml
server/: Cargo.toml  log4rs.yaml
server/src/: main.rs  simulator.rs  utils.rs
shared/: Cargo.toml
shared/src/: lib.rs  models.rs  simulator.rs
sniffer/: Cargo.toml  build.rs
sniffer-consumer/: Cargo.toml  build.rs
sniffer-consumer/src/: lib.rs  main.rs  models.rs
sniffer/consumer/: Cargo.toml
sniffer/consumer/src/: lib.rs
sniffer/lib/: Cargo.toml
sniffer/src/: lib.rs  main.rs
src/: args.rs  consumer.rs  data_source.rs  file_data_source.rs  main.rs  opcode_tracker_handler.rs  packet_handler.rs  packet_info.rs  processor.rs  raw_dump_handler.rs  utils.rs  windivert_source.rs
web/: package-lock.json  package.json  vite.config.ts
web/src/: app.css  app.html
web/src/lib/: api.ts  appState.ts  types.ts
web/src/lib/components/: AppShell.svelte  Landing.svelte  Loading.svelte  Provider.svelte  Sidebar.svelte
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/debug/: +page.svelte
web/src/routes/history/: +page.svelte
web/src/routes/settings/: +page.svelte
