[package]
name = "packet-sniffer"
version = "0.1.0"
authors = ["Jozef Podlecki"]
edition = "2024"
rust-version = "1.85"
build = "build.rs"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"

[dependencies]
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "signal", "time", "sync", "macros"] }
windivert = "0.6.0"
anyhow = "1.0.96"
log = "0.4"
simple_logger = "5.0.0"
chrono = "0.4.31"
etherparse = "0.17"
hex = "0.4.3"
byteorder = "1.5.0"
crossbeam = "0.8.4"
crossterm = "0.29.0"
clap = { version = "4.5.31", features = ["derive"] }