[package]
name = "sniffer-consumer"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "sniffer-consumer"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "signal", "macros"] }
anyhow = "1.0.96"
log = "0.4"
libloading = "0.8.6"